# cmip-ghg-forcing

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/local/download/: README.md  download.py  ground_based_data.py  main.py  satellite_data.py
src/local/processing/: fit_AGAGE_sat.py  fit_NOAA_sat.py  fit_all_gb_sat.py  fit_all_sat.py  fit_gb_sat.py  pair_selection.py  pair_selection_NOAA.py  pair_selection_NOAA_flask.py  pair_selection_agage.py  utils.py
src/local/scaling_satellite_data/: scaling_satellite_data_NOAA.py
src/local/visualization/: NOAA_data.py  NOAA_flask.py  OBS4MIP.py  agage_data.py  avergating_kernels.py  gif_sat_data.py  ground_based.py  input4MIP.py
