[project]
authors = [
    { name = "Anna Lanteri", email = "anna.lanteri@climate-resource.com"},
]
requires-python = ">=3.10"
dependencies = [
    "pre-commit>=3.3.1",
    "jupyterlab>=4.0.0",
    "jupytext>=1.15.2",
    "xarray>=2024.0.0",
    "matplotlib>=3.8.0", 
]
name = "local"
version = "0.1.0"
description = "Compare satellite and ground-based measurements of GHG emissions using a basic fit"
readme = "README.md"

[tool.pixi.workspace]
channels = [
    "conda-forge",
]
platforms = [
    "osx-64",
    "osx-arm64",
    "linux-64",
    "linux-aarch64",
    "win-64",
]

[tool.pixi.tasks]

[build-system]
requires = ["uv_build>=0.8.7,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    "src/local"
]

[tool.pixi.pypi-dependencies]
local = { path = ".", editable = true }

[tool.pixi.dependencies]
netcdf4 = ">=1.7.4,<2"


[tool.jupytext]
formats = "ipynb,py:percent"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "D",
    "PL",
    "TRY",
    "NPY",
    "RUF",
    "UP",
    "S",
]
unfixable = [ ]
ignore = [
    "D200",
    "D400",
    "UP007",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
